--- a/waybar/style.css
+++ b/waybar/style.css
@@ -34,7 +34,8 @@ tooltip label {
 #custom-gpu,
 #memory,
 #pulseaudio,
-#pulseauio#mic {
+#custom-updates,
+#custom-lock_screen {
     margin-bottom: 10px;
     padding: 6px 10px;
     border: 2px;
@@ -70,9 +71,16 @@ tooltip label {
 }
 
         /* MODULES-CENTER  */
-#clock {
+#clock,
+#pulseaudio,
+#custom-lock_screen {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
+}
+
+#clock {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 #custom-power_btn {
@@ -81,6 +89,10 @@ tooltip label {
     padding-left: 0;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
+}
+
+#custom-updates {
+    margin-left: 5px;
 }
 
         /* MODULES-RIGHT */
@@ -100,6 +112,20 @@ tooltip label {
 
 #taskbar button:hover {
     opacity: 1;
+}
+
+#pulseaudio {
+    color:rgb(66, 155, 238);
+}
+
+#pulseaudio.mic {
+    margin-right: 5px;
+    margin-left: -10px;
+    color: rgb(204, 96, 236);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 #language {
